AUTO_MAKE_OPTIONS = gnu
lib_LTLIBRARIES = libconio.la

libconio_la_SOURCES = conio.c

include_HEADERS = conio.h

man_MANS = clreol.3 clrscr.3 gotoxy.3 textbackground.3 textcolor.3 wherex.3 cgetch.3 cgetche.3 wherey.3

EXTRA_DIST = clreol.3 clrscr.3 gotoxy.3 textbackground.3 textcolor.3 wherex.3 cgetch.3 cgetche.3 wherey.3

libconio_la_LDFLAGS = -version-info 0:0:0 -shared -soname 
